Fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .text-div {
-  width: 50vw;
+  width: 80vw;
 }
 
 
